--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <!-- Google Font: Source Sans Pro -->
+  <script src="https://accounts.google.com/gsi/client" async></script>
+
    <!-- Favicon icon -->
 <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon.png">
 <!-- Bootstrap Core CSS -->
